parser/src/parser/expressions/snapshots/parser__parser__expressions__if_expr__tests__parse_chained_if.snap
---
source: parser/src/parser/expressions/if_expr.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 74)
  FN_DEF@[0; 74)
    FN_KW@[0; 2) "fn"
    WHITESPACE@[2; 3) " "
    NAME@[3; 7)
      IDENT@[3; 7) "main"
    PARAM_LIST@[7; 9)
      L_PAREN@[7; 8) "("
      R_PAREN@[8; 9) ")"
    WHITESPACE@[9; 10) " "
    BLOCK_EXPR@[10; 74)
      BLOCK@[10; 74)
        L_CURLY@[10; 11) "{"
        WHITESPACE@[11; 12) " "
        EXPR_STMT@[12; 73)
          IF_EXPR@[12; 73)
            IF_KW@[12; 14) "if"
            WHITESPACE@[14; 15) " "
            CONDITION@[15; 20)
              LITERAL@[15; 19)
                TRUE_KW@[15; 19) "true"
              WHITESPACE@[19; 20) " "
            BLOCK_EXPR@[20; 22)
              BLOCK@[20; 22)
                L_CURLY@[20; 21) "{"
                R_CURLY@[21; 22) "}"
            WHITESPACE@[22; 23) " "
            ELSE_KW@[23; 27) "else"
            WHITESPACE@[27; 28) " "
            IF_EXPR@[28; 73)
              IF_KW@[28; 30) "if"
              WHITESPACE@[30; 31) " "
              CONDITION@[31; 37)
                LITERAL@[31; 36)
                  FALSE_KW@[31; 36) "false"
                WHITESPACE@[36; 37) " "
              BLOCK_EXPR@[37; 39)
                BLOCK@[37; 39)
                  L_CURLY@[37; 38) "{"
                  R_CURLY@[38; 39) "}"
              WHITESPACE@[39; 40) " "
              ELSE_KW@[40; 44) "else"
              WHITESPACE@[44; 45) " "
              IF_EXPR@[45; 73)
                IF_KW@[45; 47) "if"
                WHITESPACE@[47; 48) " "
                CONDITION@[48; 53)
                  LITERAL@[48; 52)
                    TRUE_KW@[48; 52) "true"
                  WHITESPACE@[52; 53) " "
                BLOCK_EXPR@[53; 55)
                  BLOCK@[53; 55)
                    L_CURLY@[53; 54) "{"
                    R_CURLY@[54; 55) "}"
                WHITESPACE@[55; 56) " "
                ELSE_KW@[56; 60) "else"
                WHITESPACE@[60; 61) " "
                IF_EXPR@[61; 73)
                  IF_KW@[61; 63) "if"
                  WHITESPACE@[63; 64) " "
                  CONDITION@[64; 70)
                    LITERAL@[64; 69)
                      FALSE_KW@[64; 69) "false"
                    WHITESPACE@[69; 70) " "
                  BLOCK_EXPR@[70; 72)
                    BLOCK@[70; 72)
                      L_CURLY@[70; 71) "{"
                      R_CURLY@[71; 72) "}"
                  WHITESPACE@[72; 73) " "
        R_CURLY@[73; 74) "}"

